5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4015/executions/1616_2927.log
== TEST (2019-04-01 14:29:58) 
-- CODE:
a=float(iput("qual o valor de sua bebida?"))
refri=a*1
suco=3
b=float(input("quantos salgados?"))
esfi=1.5*b
preco(a+b)
print(round(a,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    a=float(iput("qual o valor de sua bebida?"))
NameError: name 'iput' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:05) 
-- CODE:
a=float(input("qual o valor de sua bebida?"))
refri=a*1
suco=3
b=float(input("quantos salgados?"))
esfi=1.5*b
preco(a+b)
print(round(a,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco(a+b)
NameError: name 'preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:18) 
-- CODE:
a=float(input("qual o valor de sua bebida?"))
refri=a*1
suco=3
b=float(input("quantos salgados?"))
esfi=1.5*b
preco(a+b)
print(round(a,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco(a+b)
NameError: name 'preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:41) 
-- CODE:
a=float(input("qual o valor de sua bebida?"))
refri=a*1
suco=3
b=float(input("quantos salgados?"))
esfi=1.5*b
preco(a+b)
print(round(preco,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco(a+b)
NameError: name 'preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:30:43) 
-- CODE:
a=float(input("qual o valor de sua bebida?"))
refri=a*1
suco=3
b=float(input("quantos salgados?"))
esfi=1.5*b
preco(a+b)
print(round(preco,2))

-- EXECUTION TIME:
0.211551
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2927/main.py", line 6, in <module>
    preco(a+b)
NameError: name 'preco' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:30:44) 
-- CODE:
a=float(input("qual o valor de sua bebida?"))
refri=a*1
suco=3
b=float(input("quantos salgados?"))
esfi=1.5*b
preco(a+b)
print(round(preco,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    preco(a+b)
NameError: name 'preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:32) 
-- CODE:
a=float(input("qual o valor de sua bebida?"))
refri=a*1
suco=3
b=float(input("quantos salgados?"))
esfi=1.5*b
preco=(a+b)
print(round(preco,2))

-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:32:00) 
-- CODE:
a=float(input("qual o valor de sua bebida?"))
refri=a*1
suco=3
b=float(input("quantos salgados?"))
esfi=1.5*b
preco=(a+b)
print(round(preco,2))

-- OUTPUT:
6.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:32:14) 
-- CODE:
a=float(input("qual o valor de sua bebida?"))
refri=a*1
suco=3
b=float(input("quantos salgados?"))
esfi=1.5*b
preco=(a+b)
print(round(preco,2))

-- EXECUTION TIME:
0.176682
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
6.0
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
7.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:35:17) 
-- CODE:
a=float(input("qual o valor de sua bebida?"))
refri=a*1
suco=3
b=float(input("quantos salgados?"))
esfi=1.5*b
preco=(refri+esfi)
print(round(preco,2))

-- OUTPUT:
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:35:25) 
-- CODE:
a=float(input("qual o valor de sua bebida?"))
refri=a*1
suco=3
b=float(input("quantos salgados?"))
esfi=1.5*b
preco=(refri+esfi)
print(round(preco,2))

-- OUTPUT:
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:35:25) 
-- CODE:
a=float(input("qual o valor de sua bebida?"))
refri=a*1
suco=3
b=float(input("quantos salgados?"))
esfi=1.5*b
preco=(refri+esfi)
print(round(preco,2))

-- EXECUTION TIME:
0.127276
-- TEST CASE 1:
---- input:
3
3
---- correct output:
7.5
---- user output:
7.5
-- TEST CASE 2:
---- input:
3.5
4
---- correct output:
9.5
---- user output:
9.5
-- TEST CASE 3:
---- input:
3
5
---- correct output:
10.5
---- user output:
10.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
